--- a/XmlCleaner/MainWindow.xaml
+++ b/XmlCleaner/MainWindow.xaml
@@ -1,9 +1,23 @@
-﻿<Window x:Class="XmlCleaner.MainWindow"
+﻿<controls:MetroWindow x:Class="XmlCleaner.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:avalonEdit="http://icsharpcode.net/sharpdevelop/avalonedit"
-        Title="MainWindow" Height="768" Width="1024"
+        xmlns:controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+        Title="XML Cleaner" Height="768" Width="1024"
         WindowStartupLocation="CenterScreen">
+
+    <Window.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Colours.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/Blue.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/BaseLight.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </Window.Resources>
+
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
@@ -19,6 +33,7 @@
                 <Setter Property="FontFamily" Value="Consolas"></Setter>
                 <Setter Property="SyntaxHighlighting" Value="XML"></Setter>
                 <Setter Property="FontSize" Value="10px"></Setter>
+                <Setter Property="Margin" Value="12,12,12,12"></Setter>
             </Style>
         </Grid.Resources>
 
@@ -30,4 +45,4 @@
                                ShowLineNumbers="True"
                                KeyDown="TxtCode_OnKeyDown"></avalonEdit:TextEditor>
     </Grid>
-</Window>
+</controls:MetroWindow>
