--- a/XmlCleaner/MainWindow.xaml
+++ b/XmlCleaner/MainWindow.xaml
@@ -28,6 +28,7 @@
             <ColumnDefinition Width="2*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
             <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
@@ -43,14 +44,24 @@
                 <Setter Property="Margin" Value="12,12,12,12" />
             </Style>
         </Grid.Resources>
+        
 
-        <TabControl>
+        <Menu Grid.ColumnSpan="2">
+            <MenuItem Header="File">
+                <MenuItem Header="New"></MenuItem>
+                <MenuItem Header="Open"></MenuItem>
+                <MenuItem Header="Save"></MenuItem>
+                <MenuItem Header="Exit"></MenuItem>
+            </MenuItem>
+        </Menu>
+        
+        <TabControl Grid.Row="1">
             <TabItem Header="Input XML">
                 <avalonEdit:TextEditor avalonUtilities:TextEditorExtensions.Text="{Binding InputText}" />
             </TabItem>
         </TabControl>
 
-        <TabControl Grid.Row="1">
+        <TabControl Grid.Row="2">
             <TabItem Header="Output XML">
                 <avalonEdit:TextEditor avalonUtilities:TextEditorExtensions.Text="{Binding OutputText}"
                                        IsReadOnly="True" />
@@ -61,7 +72,7 @@
             </TabItem>
         </TabControl>
 
-        <TabControl Grid.RowSpan="2" Grid.Column="1">
+        <TabControl Grid.Row="1" Grid.RowSpan="2" Grid.Column="1">
             <TabItem Header="C# code">
                 <avalonEdit:TextEditor x:Name="txtCode"
                                        avalonUtilities:TextEditorExtensions.Text="{Binding Code}"
@@ -76,14 +87,14 @@
             <TabItem Header="Syntax tree">
                 <TextBlock x:Name="TxtSyntax"
                            HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
-                           TextWrapping="WrapWithOverflow" />
+                           TextWrapping="Wrap" />
             </TabItem>
         </TabControl>
 
         <TextBlock Text="{Binding StatusText}"
                    Background="{Binding StatusBackgroundColor}"
                    Foreground="{Binding StatusForegroundColor}"
-                   Grid.Row="2" Grid.ColumnSpan="2"
+                   Grid.Row="3" Grid.ColumnSpan="2"
                    Padding="10,3" />
     </Grid>
 </controls:MetroWindow>
