--- a/SyntaxTreeVisualizer/MainWindow.xaml
+++ b/SyntaxTreeVisualizer/MainWindow.xaml
@@ -1,8 +1,56 @@
-﻿<Window x:Class="SyntaxTreeVisualizer.MainWindow"
+﻿<controls:MetroWindow x:Class="SyntaxTreeVisualizer.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
+        xmlns:controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
+                      xmlns:avalonEdit="clr-namespace:ICSharpCode.AvalonEdit;assembly=ICSharpCode.AvalonEdit"
+                      Title="Syntax Tree Visualizer" Height="768" Width="1024"
+                      WindowStartupLocation="CenterScreen">
+
+    <Window.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Colours.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/Blue.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/BaseLight.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </Window.Resources>
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
+        </Grid.ColumnDefinitions>
+
+        <TabControl>
+            <TabItem Header="C# code">
+                <avalonEdit:TextEditor x:Name="txtCode"
+                                       SyntaxHighlighting="C#"
+                                       ShowLineNumbers="True"
+                                       KeyDown="TxtCode_OnKeyDown" />
+            </TabItem>
+        </TabControl>
+
+        <TabControl Grid.Column="1">
+            <TabItem Header="Syntax tree">
+                <TreeView x:Name="SyntaxTree">
+                    <TreeView.ItemContainerStyle>
+                        <Style>
+                            <Setter Property="TreeViewItem.IsExpanded" Value="True"/>
+                        </Style>
+                    </TreeView.ItemContainerStyle>
+                    <TreeView.ItemTemplate>
+                        <HierarchicalDataTemplate ItemsSource="{Binding Children}">
+                            <StackPanel>
+                                <TextBlock Text="{Binding SyntaxNode.Kind}" />
+                                <TextBlock Text="{Binding SyntaxNode.Span}" />
+                                <TextBlock Text="{Binding Text}" />
+                            </StackPanel>
+                        </HierarchicalDataTemplate>
+                    </TreeView.ItemTemplate>
+                </TreeView>
+            </TabItem>
+        </TabControl>
     </Grid>
-</Window>
+</controls:MetroWindow>
